state inserter function and dark counts included

--- a/arbitrary_quantum_network_simulation.ipynb
+++ b/arbitrary_quantum_network_simulation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMgDBjUEPCF19/BUF/7Y/b3"
+      "authorship_tag": "ABX9TyOvebkKtyGCB8qwaZ3kmbSt"
     },
     "kernelspec": {
       "name": "python3",
@@ -21,22 +21,38 @@
         "!pip install qutip"
       ],
       "metadata": {
-        "id": "V2PSL5D_ErFs"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "V2PSL5D_ErFs",
+        "outputId": "20e10e13-dba0-462b-a627-4ae1d95abb3b"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: qutip in /usr/local/lib/python3.10/dist-packages (5.0.3.post1)\n",
+            "Requirement already satisfied: numpy>=1.22 in /usr/local/lib/python3.10/dist-packages (from qutip) (1.25.2)\n",
+            "Requirement already satisfied: scipy>=1.9 in /usr/local/lib/python3.10/dist-packages (from qutip) (1.11.4)\n",
+            "Requirement already satisfied: packaging in /usr/local/lib/python3.10/dist-packages (from qutip) (24.1)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
-        "from qutip import *"
+        "from qutip import *\n",
+        "import builtins"
       ],
       "metadata": {
         "id": "HRVKsEv9Etd-"
       },
-      "execution_count": 2,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -53,9 +69,10 @@
       "source": [
         "zero_ket = basis(2,0)\n",
         "zero_rho = zero_ket * zero_ket.dag()\n",
+        "one_rho = basis(2,1) * basis(2,1).dag()\n",
         "I = lambda: qeye(2)\n",
         "\n",
-        "def initial_rho(num_qubits):\n",
+        "def initial_rho():\n",
         "  return tensor([zero_rho for i in range (num_qubits)])\n",
         "\n",
         "def bell_state(state):\n",
@@ -98,33 +115,106 @@
         "      right_op = tensor(right_op, I())\n",
         "    return tensor(op, right_op)\n",
         "  else:\n",
-        "    return op\n"
+        "    return op\n",
+        "\n",
+        "def state_inserter(rho_initial, target_qubits, state):\n",
+        "  \"\"\"\n",
+        "    Takes a density matrix of a network, inserts the state 'state' into the slots of the target_qubits.\n",
+        "    Assumes that target qubits are beside eachother and that no entanglement exists between\n",
+        "    qubits at either side of the target_qubits.\n",
+        "\n",
+        "    Returns full density matrix of updated network\n",
+        "  \"\"\"\n",
+        "  if isinstance(target_qubits, int):\n",
+        "    num_qubits_left = target_qubits\n",
+        "    num_qubits_right = num_qubits - target_qubits - 1\n",
+        "\n",
+        "    qubits_left_list = [i for i in range(num_qubits_left)]\n",
+        "    qubits_right_list = [i + num_qubits_left + 1 for i in range(num_qubits_right)]\n",
+        "\n",
+        "  elif isinstance(target_qubits, builtins.list):\n",
+        "    num_qubits_left = target_qubits[0]\n",
+        "    num_qubits_right = num_qubits - target_qubits[-1] - 1\n",
+        "    print(target_qubits[-1])\n",
+        "\n",
+        "    qubits_left_list = [i for i in range(num_qubits_left)]\n",
+        "    qubits_right_list = [i + num_qubits_left + len(target_qubits) for i in range(num_qubits_right)]\n",
+        "\n",
+        "  else:\n",
+        "    raise TypeError('Invalid data type for target_qubit, must be int or list')\n",
+        "\n",
+        "  rho = state\n",
+        "  if len(qubits_left_list) != 0:\n",
+        "    rho_qubits_left = rho_initial.ptrace(qubits_left_list)\n",
+        "    rho = tensor(rho_qubits_left, rho)\n",
+        "\n",
+        "  if len(qubits_right_list) != 0:\n",
+        "    rho_qubits_right = rho_initial.ptrace(qubits_right_list)\n",
+        "    rho = tensor(rho, rho_qubits_right)\n",
+        "\n",
+        "  return rho\n",
+        "\n",
+        "\n",
+        "def dark_counts(rho_initial, target_qubit, n):\n",
+        "  \"\"\"\n",
+        "  Will destroy entanglement of the target_qubit if any\n",
+        "  n = total probability that a pair is established = P_link * n_ch(d)\n",
+        "  NOTE: This only does one target_qubit\n",
+        "  \"\"\"\n",
+        "\n",
+        "  dark_count_rho = rho_initial.ptrace(target_qubit) * alpha(n) + (1 - alpha(n)) / 2 * I()\n",
+        "  rho = state_inserter(rho_initial = rho_initial,\n",
+        "                       target_qubits = target_qubit, state = dark_count_rho)\n",
+        "  return rho\n",
+        "\n",
+        "\n",
+        "\n",
+        "def time_for_link(eta_eff):\n",
+        "  \"\"\"\n",
+        "  Gets the time taken to generate entanglement between 2 adjacent nodes\n",
+        "  Does this by generating random samples from a geometric distribution with\n",
+        "  success probability eta_eff and then multiplying by time taken for one trial.\n",
+        "\n",
+        "  Parameters:\n",
+        "  eta_eff (float): Success probability for the geometric distribution.\n",
+        "  num_samples (int): Number of random samples to generate.\n",
+        "\n",
+        "  Returns:\n",
+        "  np.ndarray: Array of random samples from the geometric distribution.\n",
+        "  \"\"\"\n",
+        "  no_of_trials = np.random.geometric(eta_eff)\n",
+        "  time_per_trial = T_p + 2 * d / c\n",
+        "  time_per_link = no_of_trials * time_per_trial\n",
+        "  return time_per_link"
       ],
       "metadata": {
         "id": "W29qfNdbEvbo"
       },
-      "execution_count": 9,
+      "execution_count": 95,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 96,
       "metadata": {
         "id": "Nb8WtaR3Dfu3"
       },
       "outputs": [],
       "source": [
-        "def entanglement_generation_with_ptracing_and_dephasing(rho_initial, q1, q2, F_initial):\n",
+        "def entanglement_generation(rho_initial, q1, q2, F_initial):\n",
         "  \"\"\"\n",
         "    This function generates entanglement across 2 neighbouring repeater stations\n",
-        "    It does this by first creating a bell pair across 2 qubits, padding this out\n",
-        "    with identities so that it matches the size of the network, then it multiplies\n",
-        "    this with the initial rho of the network.\n",
+        "    q1 and q2. It does this by first creating a phi+ bell state density matrix\n",
+        "    across 2 qubits (with a fidelity F_initial). This is inserted into the initial\n",
+        "    state rho_initial by taking the partial trace of rho_initial to the left of the\n",
+        "    pair and to the right of the pair and then tensoring these density matrices together.\n",
         "\n",
-        "    This therefore assumes that the initial state of the qubits it generates\n",
-        "    entanglement accross is 0. It will be incorrect otherwise.\n",
+        "    (This function assumes that no entangled pair exists with one qubit on each\n",
+        "    side of the 2 selected qubits which I don't believe happens in any networking\n",
+        "    protocol)\n",
         "  \"\"\"\n",
         "  # SET UP\n",
+        "  # getting the number of qubits either side of the pair and making a list of them\n",
         "  num_qubits_left = q1\n",
         "  num_qubits_right = (num_qubits - 1) - q2\n",
         "  qubits_left_list = [i for i in range(num_qubits_left)]\n",
@@ -136,6 +226,8 @@
         "  rho = F_initial * bell_state('phi+') + ((1 - F_initial) / 3) * (bell_state('phi-') +\n",
         "                                                                       bell_state('psi+') +\n",
         "                                                                       bell_state('psi-'))\n",
+        "\n",
+        "  # inserting the bell pair into rho_initial\n",
         "  if len(qubits_left_list) != 0:\n",
         "    rho_qubits_left = rho_initial.ptrace(qubits_left_list)\n",
         "    rho = tensor(rho_qubits_left, rho)\n",
@@ -157,7 +249,7 @@
         "    rho_t = dp_op * rho * dp_op.dag()\n",
         "    return rho_t\n",
         "\n",
-        "  # dephasing channel for q1\n",
+        "  # dephasing channel for q1 (stays in memory for twice as long)\n",
         "  rho = dephasing_channel(rho, 2 * d/c, num_qubits_left, num_qubits_right + 1)\n",
         "\n",
         "  # dephasing channel for q2\n",
@@ -183,9 +275,9 @@
         "total_L = 100\n",
         "d = total_L/(num_qubits - 1)\n",
         "c = 2e8 # speed of light in fiber optic\n",
-        "rho = initial_rho(num_qubits)\n",
+        "rho = initial_rho()\n",
         "\n",
-        "rho = entanglement_generation_with_ptracing_and_dephasing(rho_initial = rho, q1 = 0, q2 = 1, F_initial = 1)\n",
+        "rho = entanglement_generation(rho_initial = rho, q1 = 0, q2 = 1, F_initial = 1)\n",
         "\n",
         "for i in range(num_qubits):\n",
         "  print(f'Qubit{i}\\n', rho.ptrace(i).full(), '\\n')"
@@ -195,9 +287,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KOZOmmI9GEfq",
-        "outputId": "ccfe3d98-9871-4f52-90e3-ecfe29ddb5dc"
+        "outputId": "14a6ae1d-165f-443b-b1bf-c12519550fba"
       },
-      "execution_count": 11,
+      "execution_count": 97,
       "outputs": [
         {
           "output_type": "stream",
@@ -224,8 +316,116 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Setting Up Dark Counts"
+      ],
+      "metadata": {
+        "id": "ijkk7hTeZxma"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# modelling time it takes to complete entangelment generation event\n",
+        "L_att = 22e3   # attenuation length of optical fibers, 22km\n",
+        "p_d = 0.5        # probability of dark count occuring in detection window\n",
+        "\n",
+        "# prob pair is established not taking into account distance based losses\n",
+        "P_link = 1\n",
+        "\n",
+        "# channel efficiency\n",
+        "n_ch = lambda L: np.exp(-L/L_att)\n",
+        "\n",
+        "# total probability that a pair is established\n",
+        "n = P_link * n_ch(d)\n",
+        "\n",
+        "# the chance for a detector to click (including dark counts)\n",
+        "n_eff = 1 - (1 - n) * (1 - p_d) ** 2\n",
+        "\n",
+        "# given a click occurs, the probability it is from a real event\n",
+        "alpha = lambda n: (n * (1 - p_d)) / n_eff\n"
+      ],
+      "metadata": {
+        "id": "ZZOBecDpaeqn"
+      },
+      "execution_count": 113,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [],
+      "metadata": {
+        "id": "n8VqURthf8BW"
+      },
+      "execution_count": 114,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Printing partial traces\n",
+        "num_qubits = 4\n",
+        "total_L = 100\n",
+        "d = total_L/(num_qubits - 1)\n",
+        "c = 2e8 # speed of light in fiber optic\n",
+        "rho_initial = initial_rho()\n",
+        "\n",
+        "rho = dark_counts(rho_initial = rho_initial, target_qubit = 2, n = 1)\n",
+        "\n",
+        "for i in range(num_qubits):\n",
+        "  print(f'Qubit{i}\\n', rho.ptrace(i).full(), '\\n')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "l6LC3bfVEQDQ",
+        "outputId": "0b3d1c17-63c4-4e0e-e581-49a1c2a8ff9a"
+      },
+      "execution_count": 115,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Qubit0\n",
+            " [[1.+0.j 0.+0.j]\n",
+            " [0.+0.j 0.+0.j]] \n",
+            "\n",
+            "Qubit1\n",
+            " [[1.+0.j 0.+0.j]\n",
+            " [0.+0.j 0.+0.j]] \n",
+            "\n",
+            "Qubit2\n",
+            " [[0.75009466+0.j 0.        +0.j]\n",
+            " [0.        +0.j 0.24990534+0.j]] \n",
+            "\n",
+            "Qubit3\n",
+            " [[1.+0.j 0.+0.j]\n",
+            " [0.+0.j 0.+0.j]] \n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "\n",
+        "T_p = 1e-3\n",
+        "num_qubits = 5\n",
+        "total_L = 100\n",
+        "d = total_L/(num_qubits - 1)\n",
+        "c = 2e8 # speed of light in fiber optic\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
       "metadata": {
         "id": "dbY9SV5HG7qL"
       },
