everything is included but its messy

--- a/arbitrary_quantum_network_simulation.ipynb
+++ b/arbitrary_quantum_network_simulation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOvebkKtyGCB8qwaZ3kmbSt"
+      "authorship_tag": "ABX9TyMEFYAOB/DlCTFeuZ/Stj8d"
     },
     "kernelspec": {
       "name": "python3",
@@ -25,18 +25,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "V2PSL5D_ErFs",
-        "outputId": "20e10e13-dba0-462b-a627-4ae1d95abb3b"
+        "outputId": "f225e57e-2c6e-440f-bae8-8b81eb551499"
       },
-      "execution_count": 16,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: qutip in /usr/local/lib/python3.10/dist-packages (5.0.3.post1)\n",
-            "Requirement already satisfied: numpy>=1.22 in /usr/local/lib/python3.10/dist-packages (from qutip) (1.25.2)\n",
+            "Collecting qutip\n",
+            "  Downloading qutip-5.0.3.post1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (28.0 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m28.0/28.0 MB\u001b[0m \u001b[31m23.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: numpy>=1.22 in /usr/local/lib/python3.10/dist-packages (from qutip) (1.25.2)\n",
             "Requirement already satisfied: scipy>=1.9 in /usr/local/lib/python3.10/dist-packages (from qutip) (1.11.4)\n",
-            "Requirement already satisfied: packaging in /usr/local/lib/python3.10/dist-packages (from qutip) (24.1)\n"
+            "Requirement already satisfied: packaging in /usr/local/lib/python3.10/dist-packages (from qutip) (24.1)\n",
+            "Installing collected packages: qutip\n",
+            "Successfully installed qutip-5.0.3.post1\n"
           ]
         }
       ]
@@ -52,7 +56,7 @@
       "metadata": {
         "id": "HRVKsEv9Etd-"
       },
-      "execution_count": 29,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -135,7 +139,6 @@
         "  elif isinstance(target_qubits, builtins.list):\n",
         "    num_qubits_left = target_qubits[0]\n",
         "    num_qubits_right = num_qubits - target_qubits[-1] - 1\n",
-        "    print(target_qubits[-1])\n",
         "\n",
         "    qubits_left_list = [i for i in range(num_qubits_left)]\n",
         "    qubits_right_list = [i + num_qubits_left + len(target_qubits) for i in range(num_qubits_right)]\n",
@@ -190,12 +193,12 @@
       "metadata": {
         "id": "W29qfNdbEvbo"
       },
-      "execution_count": 95,
+      "execution_count": 10,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": 4,
       "metadata": {
         "id": "Nb8WtaR3Dfu3"
       },
@@ -287,9 +290,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KOZOmmI9GEfq",
-        "outputId": "14a6ae1d-165f-443b-b1bf-c12519550fba"
+        "outputId": "c89b7e66-f68e-458a-d86d-69a3b3ff4611"
       },
-      "execution_count": 97,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -349,29 +352,48 @@
       "metadata": {
         "id": "ZZOBecDpaeqn"
       },
-      "execution_count": 113,
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def imperfect_bell_measurements(rho_initial, q1, q2, lambda_BSM):\n",
+        "  # checking its 2 qubits beside eachother\n",
+        "  if isinstance (q1, int) and isinstance (q2, int) and np.abs(q2 - q1) == 1:\n",
+        "\n",
+        "    num_qubits_left = q1\n",
+        "    num_qubits_right = (num_qubits - 1) - q2\n",
+        "    qubits_left_list = [i for i in range(num_qubits_left)]\n",
+        "    qubits_right_list = [i + num_qubits_left + 2 for i in range(num_qubits_right)]\n",
+        "\n",
+        "    imperfect_measurement = lambda_BSM * rho_initial.ptrace([q1, q2]) + (1 - lambda_BSM) / 4 * tensor(I(), I())\n",
+        "    print(imperfect_measurement.ptrace(0).full(),'\\n')\n",
+        "    print(imperfect_measurement.ptrace(1).full(), '\\n')\n",
+        "    rho = state_inserter(rho_initial = rho_initial, target_qubits = [q1,q2], state = imperfect_measurement)\n",
+        "\n",
+        "    return rho\n",
+        "\n",
+        "  else:\n",
+        "    raise TypeError('Invalid data type for target_qubits, must be a list with 2 adjacent qubits')"
+      ],
       "metadata": {
         "id": "n8VqURthf8BW"
       },
-      "execution_count": 114,
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# Printing partial traces\n",
-        "num_qubits = 4\n",
+        "num_qubits = 9\n",
         "total_L = 100\n",
         "d = total_L/(num_qubits - 1)\n",
         "c = 2e8 # speed of light in fiber optic\n",
         "rho_initial = initial_rho()\n",
         "\n",
-        "rho = dark_counts(rho_initial = rho_initial, target_qubit = 2, n = 1)\n",
+        "rho = imperfect_bell_measurements(rho_initial = rho_initial, q1 = 0, q2 = 1, lambda_BSM = 0.5)\n",
         "\n",
         "for i in range(num_qubits):\n",
         "  print(f'Qubit{i}\\n', rho.ptrace(i).full(), '\\n')"
@@ -381,27 +403,53 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "l6LC3bfVEQDQ",
-        "outputId": "0b3d1c17-63c4-4e0e-e581-49a1c2a8ff9a"
+        "outputId": "c95fbf1c-35d1-4dda-a4f9-e58fa58152b2"
       },
-      "execution_count": 115,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "[[0.75+0.j 0.  +0.j]\n",
+            " [0.  +0.j 0.25+0.j]] \n",
+            "\n",
+            "[[0.75+0.j 0.  +0.j]\n",
+            " [0.  +0.j 0.25+0.j]] \n",
+            "\n",
             "Qubit0\n",
-            " [[1.+0.j 0.+0.j]\n",
-            " [0.+0.j 0.+0.j]] \n",
+            " [[0.75+0.j 0.  +0.j]\n",
+            " [0.  +0.j 0.25+0.j]] \n",
             "\n",
             "Qubit1\n",
+            " [[0.75+0.j 0.  +0.j]\n",
+            " [0.  +0.j 0.25+0.j]] \n",
+            "\n",
+            "Qubit2\n",
             " [[1.+0.j 0.+0.j]\n",
             " [0.+0.j 0.+0.j]] \n",
             "\n",
-            "Qubit2\n",
-            " [[0.75009466+0.j 0.        +0.j]\n",
-            " [0.        +0.j 0.24990534+0.j]] \n",
-            "\n",
             "Qubit3\n",
+            " [[1.+0.j 0.+0.j]\n",
+            " [0.+0.j 0.+0.j]] \n",
+            "\n",
+            "Qubit4\n",
+            " [[1.+0.j 0.+0.j]\n",
+            " [0.+0.j 0.+0.j]] \n",
+            "\n",
+            "Qubit5\n",
+            " [[1.+0.j 0.+0.j]\n",
+            " [0.+0.j 0.+0.j]] \n",
+            "\n",
+            "Qubit6\n",
+            " [[1.+0.j 0.+0.j]\n",
+            " [0.+0.j 0.+0.j]] \n",
+            "\n",
+            "Qubit7\n",
+            " [[1.+0.j 0.+0.j]\n",
+            " [0.+0.j 0.+0.j]] \n",
+            "\n",
+            "Qubit8\n",
             " [[1.+0.j 0.+0.j]\n",
             " [0.+0.j 0.+0.j]] \n",
             "\n"
@@ -412,24 +460,25 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "\n",
         "T_p = 1e-3\n",
         "num_qubits = 5\n",
         "total_L = 100\n",
         "d = total_L/(num_qubits - 1)\n",
-        "c = 2e8 # speed of light in fiber optic\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n"
+        "c = 2e8 # speed of light in fiber optic"
       ],
       "metadata": {
         "id": "dbY9SV5HG7qL"
       },
-      "execution_count": null,
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "yutT_TixTTHM"
+      },
+      "execution_count": 9,
       "outputs": []
     }
   ]
