dark counts not destroying entanglement anymore

--- a/arbitrary_quantum_network_simulation.ipynb
+++ b/arbitrary_quantum_network_simulation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMEFYAOB/DlCTFeuZ/Stj8d"
+      "authorship_tag": "ABX9TyOey7u0fgVCO534npTH4Ssa"
     },
     "kernelspec": {
       "name": "python3",
@@ -76,7 +76,7 @@
         "one_rho = basis(2,1) * basis(2,1).dag()\n",
         "I = lambda: qeye(2)\n",
         "\n",
-        "def initial_rho():\n",
+        "def initial_rho(num_qubits):\n",
         "  return tensor([zero_rho for i in range (num_qubits)])\n",
         "\n",
         "def bell_state(state):\n",
@@ -158,17 +158,7 @@
         "  return rho\n",
         "\n",
         "\n",
-        "def dark_counts(rho_initial, target_qubit, n):\n",
-        "  \"\"\"\n",
-        "  Will destroy entanglement of the target_qubit if any\n",
-        "  n = total probability that a pair is established = P_link * n_ch(d)\n",
-        "  NOTE: This only does one target_qubit\n",
-        "  \"\"\"\n",
         "\n",
-        "  dark_count_rho = rho_initial.ptrace(target_qubit) * alpha(n) + (1 - alpha(n)) / 2 * I()\n",
-        "  rho = state_inserter(rho_initial = rho_initial,\n",
-        "                       target_qubits = target_qubit, state = dark_count_rho)\n",
-        "  return rho\n",
         "\n",
         "\n",
         "\n",
@@ -188,21 +178,25 @@
         "  no_of_trials = np.random.geometric(eta_eff)\n",
         "  time_per_trial = T_p + 2 * d / c\n",
         "  time_per_link = no_of_trials * time_per_trial\n",
-        "  return time_per_link"
+        "  return time_per_link\n",
+        "\n",
+        "\n",
+        "def dephasing_channel(rho, t, left_padding, right_padding):\n",
+        "    dp_prob = (1 - np.exp(-t / T_dp)) / 2\n",
+        "    dp_op = np.sqrt(1 - dp_prob) * qeye(2) + np.sqrt(dp_prob) * sigmaz()\n",
+        "    dp_op = pad_op_to_left(dp_op, left_padding)\n",
+        "    dp_op = pad_op_to_right(dp_op, right_padding)\n",
+        "    rho_t = dp_op * rho * dp_op.dag()\n",
+        "    return rho_t"
       ],
       "metadata": {
         "id": "W29qfNdbEvbo"
       },
-      "execution_count": 10,
+      "execution_count": 64,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
-      "metadata": {
-        "id": "Nb8WtaR3Dfu3"
-      },
-      "outputs": [],
       "source": [
         "def entanglement_generation(rho_initial, q1, q2, F_initial):\n",
         "  \"\"\"\n",
@@ -243,32 +237,42 @@
         "  # ADDING MEMORY NOISE\n",
         "  T_dp = 0.001 # dephasing time\n",
         "\n",
-        "  # dephasing channel\n",
-        "  def dephasing_channel(rho, t, left_padding, right_padding):\n",
-        "    dp_prob = (1 - np.exp(-t / T_dp)) / 2\n",
-        "    dp_op = np.sqrt(1 - dp_prob) * qeye(2) + np.sqrt(dp_prob) * sigmaz()\n",
-        "    dp_op = pad_op_to_left(dp_op, left_padding)\n",
-        "    dp_op = pad_op_to_right(dp_op, right_padding)\n",
-        "    rho_t = dp_op * rho * dp_op.dag()\n",
-        "    return rho_t\n",
         "\n",
         "  # dephasing channel for q1 (stays in memory for twice as long)\n",
-        "  rho = dephasing_channel(rho, 2 * d/c, num_qubits_left, num_qubits_right + 1)\n",
+        "  rho = dephasing_channel(rho=rho, t = 2 * d/c, left_padding = num_qubits_left, right_padding = num_qubits_right + 1)\n",
         "\n",
-        "  # dephasing channel for q2\n",
-        "  rho = dephasing_channel(rho, d/c, num_qubits_left + 1, num_qubits_right)\n",
+        "  # dephasing channel for q2\n",
+        "  rho = dephasing_channel(rho=rho, t = d/c, left_padding = num_qubits_left + 1, right_padding = num_qubits_right)\n",
         "\n",
         "  return rho"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# Running the Simulation"
       ],
       "metadata": {
-        "id": "piSbWSEnGFCH"
-      }
+        "id": "UtxWBjOk22Fx"
+      },
+      "execution_count": 65,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def dark_counts_ent_gen(rho_initial, q1, q2, n):\n",
+        "  \"\"\"\n",
+        "  q2 experiences the dark counts. q1 is included in the partial trace as\n",
+        "  entanglement is broken otherwise\n",
+        "  n = total probability that a pair is established = P_link * n_ch(d)\n",
+        "  NOTE: This only does one target_qubit\n",
+        "  \"\"\"\n",
+        "\n",
+        "  dark_count_rho = rho_initial.ptrace([q1, q2]) * alpha(n) + (1 - alpha(n)) / 2 * tensor(rho_initial.ptrace(q1) , I())\n",
+        "  rho = state_inserter(rho_initial = rho_initial,\n",
+        "                       target_qubits = [q1,q2], state = dark_count_rho)\n",
+        "  return rho"
+      ],
+      "metadata": {
+        "id": "h6zK2lFp7F6U"
+      },
+      "execution_count": 84,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -278,43 +282,63 @@
         "total_L = 100\n",
         "d = total_L/(num_qubits - 1)\n",
         "c = 2e8 # speed of light in fiber optic\n",
-        "rho = initial_rho()\n",
+        "rho = initial_rho(num_qubits)\n",
+        "q1 = 0\n",
+        "q2 = 1\n",
+        "p_d = 0.5\n",
+        "T_dp = 100\n",
         "\n",
-        "rho = entanglement_generation(rho_initial = rho, q1 = 0, q2 = 1, F_initial = 1)\n",
+        "rho = entanglement_generation(rho_initial=rho, q1=0, q2=1, F_initial=1)\n",
+        "rho = dark_counts_ent_gen(rho_initial = rho, q1 = 0, q2=1, n = 0.5)\n",
         "\n",
         "for i in range(num_qubits):\n",
-        "  print(f'Qubit{i}\\n', rho.ptrace(i).full(), '\\n')"
+        "  print(f'Qubit{i}\\n', rho.ptrace(i).full(), '\\n')\n",
+        "np.round(rho.ptrace([0,1]).full(), 3)\n",
+        "\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "KOZOmmI9GEfq",
-        "outputId": "c89b7e66-f68e-458a-d86d-69a3b3ff4611"
+        "outputId": "89afa653-8d2c-41c9-b0ac-eb323a9c15ca"
       },
-      "execution_count": 5,
+      "execution_count": 95,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Qubit0\n",
-            " [[0.52227139+0.j 0.        +0.j]\n",
-            " [0.        +0.j 0.4781999 +0.j]] \n",
+            " [[0.5000697 +0.j 0.        +0.j]\n",
+            " [0.        +0.j 0.49993031+0.j]] \n",
             "\n",
             "Qubit1\n",
-            " [[0.52227139+0.j 0.        +0.j]\n",
-            " [0.        +0.j 0.4781999 +0.j]] \n",
+            " [[0.50001743+0.j 0.        +0.j]\n",
+            " [0.        +0.j 0.49998258+0.j]] \n",
             "\n",
             "Qubit2\n",
-            " [[1.00047129+0.j 0.        +0.j]\n",
+            " [[1.00000001+0.j 0.        +0.j]\n",
             " [0.        +0.j 0.        +0.j]] \n",
             "\n",
             "Qubit3\n",
-            " [[1.00047129+0.j 0.        +0.j]\n",
+            " [[1.00000001+0.j 0.        +0.j]\n",
             " [0.        +0.j 0.        +0.j]] \n",
             "\n"
           ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.313+0.j, 0.   +0.j, 0.   +0.j, 0.125+0.j],\n",
+              "       [0.   +0.j, 0.188+0.j, 0.   +0.j, 0.   +0.j],\n",
+              "       [0.   +0.j, 0.   +0.j, 0.187+0.j, 0.   +0.j],\n",
+              "       [0.125+0.j, 0.   +0.j, 0.   +0.j, 0.312+0.j]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 95
         }
       ]
     },
